--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,18 +1,143 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeActivity">
+    android:orientation="vertical"
+    tools:context=".ui.HomeActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:contentDescription="@string/home_activity_layout_image_content_desc"
+            android:src="@drawable/tinru_home_activity_fallback_image"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/material_design_phone_grid_layout_margin"
+            android:layout_marginTop="@dimen/material_design_phone_grid_layout_margin"
+            android:text="Kolkata, India"/>
+            tools:text="London, UK"/>
+        <Button
+            android:id="@+id/bt_location_search"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/home_activity_layout_search_button_text"
+            android:drawableLeft="@drawable/tinru_search_icon"
+            android:drawablePadding="@dimen/home_search_button_drawable_padding"
+            android:textAllCaps="false"
+            android:layout_marginBottom="@dimen/home_search_button_bottom_padding"
+            android:layout_gravity="bottom|center"/>
+    </FrameLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:layout_margin="@dimen/material_design_phone_grid_layout_margin"
+        android:gravity="bottom">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+            <Button
+                android:id="@+id/bt_nearby_restaurant"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:layout_gravity="center"
+                android:background="@color/color_white"
+                android:foreground="?attr/selectableItemBackgroundBorderless"
+                android:layout_margin="@dimen/home_nearby_bottom_padding"
+                android:elevation="4dp"
+                android:textAllCaps="false"
+                android:drawableTop="@drawable/tinru_restaurant_icon"
+                android:text="@string/home_activity_layout_nearby_restaurant"/>
+            <Button
+                android:id="@+id/bt_nearby_cafe"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:layout_gravity="center"
+                android:background="@color/color_white"
+                android:foreground="?attr/selectableItemBackgroundBorderless"
+                android:layout_margin="@dimen/home_nearby_bottom_padding"
+                android:elevation="4dp"
+                android:textAllCaps="false"
+                android:drawableTop="@drawable/tinru_cafe_icon"
+                android:text="@string/home_activity_layout_nearby_cafe"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+            <Button
+                android:id="@+id/bt_nearby_bar"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:layout_gravity="center"
+                android:background="@color/color_white"
+                android:foreground="?attr/selectableItemBackgroundBorderless"
+                android:layout_margin="@dimen/home_nearby_bottom_padding"
+                android:elevation="4dp"
+                android:textAllCaps="false"
+                android:drawableTop="@drawable/tinru_bar_icon"
+                android:text="@string/home_activity_layout_nearby_bar"/>
+            <Button
+                android:id="@+id/bt_nearby_atm"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:layout_gravity="center"
+                android:background="@color/color_white"
+                android:foreground="?attr/selectableItemBackgroundBorderless"
+                android:layout_margin="@dimen/home_nearby_bottom_padding"
+                android:elevation="4dp"
+                android:textAllCaps="false"
+                android:drawableTop="@drawable/tinru_atm_icon"
+                android:text="@string/home_activity_layout_nearby_atm"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+            <Button
+                android:id="@+id/bt_nearby_shopping"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:layout_gravity="center"
+                android:background="@color/color_white"
+                android:foreground="?attr/selectableItemBackgroundBorderless"
+                android:layout_margin="@dimen/home_nearby_bottom_padding"
+                android:elevation="4dp"
+                android:textAllCaps="false"
+                android:drawableTop="@drawable/tinru_shopping_icon"
+                android:text="@string/home_activity_layout_nearby_shopping"/>
+            <Button
+                android:id="@+id/bt_nearby_petrol_pump"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:layout_gravity="center"
+                android:background="@color/color_white"
+                android:foreground="?attr/selectableItemBackgroundBorderless"
+                android:layout_margin="@dimen/home_nearby_bottom_padding"
+                android:elevation="4dp"
+                android:textAllCaps="false"
+                android:drawableTop="@drawable/tinru_petrol_pump_icon"
+                android:text="@string/home_activity_layout_nearby_petrol_pump"/>
+        </LinearLayout>
+    </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
