Second workable commit

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,143 +1,188 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".ui.HomeActivity">
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:contentDescription="@string/home_activity_layout_image_content_desc"
-            android:src="@drawable/tinru_home_activity_fallback_image"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/material_design_phone_grid_layout_margin"
-            android:layout_marginTop="@dimen/material_design_phone_grid_layout_margin"
-            android:text="Kolkata, India"/>
-            tools:text="London, UK"/>
-        <Button
-            android:id="@+id/bt_location_search"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/home_activity_layout_search_button_text"
-            android:drawableLeft="@drawable/tinru_search_icon"
-            android:drawablePadding="@dimen/home_search_button_drawable_padding"
-            android:textAllCaps="false"
-            android:layout_marginBottom="@dimen/home_search_button_bottom_padding"
-            android:layout_gravity="bottom|center"/>
-    </FrameLayout>
+    <ProgressBar
+        android:id="@+id/pb_home_actvity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="visible"/>
+
+    <TextView
+        android:id="@+id/tv_progressbar_text_msg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center|bottom"
+        android:fontFamily="sans-serif"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:layout_marginBottom="@dimen/material_design_phone_grid_layout_margin"
+        android:text="@string/home_progressbar_text_msg"
+        android:visibility="invisible"/>
+
     <LinearLayout
+        android:id="@+id/home_activity_linear_layout"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_margin="@dimen/material_design_phone_grid_layout_margin"
-        android:gravity="bottom">
+        android:visibility="invisible">
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+
+            <ImageView
+                android:id="@+id/iv_current_place_image"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="@string/home_activity_layout_image_content_desc"
+                android:scaleType="centerCrop"
+                android:src="@drawable/tinru_home_activity_fallback_image" />
+
+            <TextView
+                android:id="@+id/tv_current_place_city_country"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/black_color_opacity_10"
+                android:paddingBottom="@dimen/material_design_phone_grid_layout_margin"
+                android:paddingLeft="@dimen/material_design_phone_grid_layout_margin"
+                android:paddingTop="@dimen/material_design_phone_grid_layout_margin"
+                android:text="Kolkata, India"
+                android:fontFamily="sans-serif"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textColor="@color/color_white"
+                tools:text="London, UK"/>
+
+            <Button
+                android:id="@+id/bt_location_search"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|center"
+                android:layout_marginBottom="@dimen/home_search_button_bottom_padding"
+                android:alpha=".8"
+                android:drawableLeft="@drawable/tinru_search_icon"
+                android:drawablePadding="@dimen/home_search_button_drawable_padding"
+                android:text="@string/home_activity_layout_search_button_text"
+                android:textAllCaps="false" />
+        </FrameLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_margin="@dimen/material_design_phone_grid_layout_margin"
             android:layout_weight="1"
-            android:orientation="horizontal">
-            <Button
-                android:id="@+id/bt_nearby_restaurant"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
+            android:gravity="bottom"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
                 android:layout_weight="1"
-                android:layout_gravity="center"
-                android:background="@color/color_white"
-                android:foreground="?attr/selectableItemBackgroundBorderless"
-                android:layout_margin="@dimen/home_nearby_bottom_padding"
-                android:elevation="4dp"
-                android:textAllCaps="false"
-                android:drawableTop="@drawable/tinru_restaurant_icon"
-                android:text="@string/home_activity_layout_nearby_restaurant"/>
-            <Button
-                android:id="@+id/bt_nearby_cafe"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/bt_nearby_restaurant"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_margin="@dimen/home_nearby_bottom_padding"
+                    android:layout_weight="1"
+                    android:background="@color/color_white"
+                    android:drawableTop="@drawable/tinru_restaurant_icon"
+                    android:elevation="4dp"
+                    android:foreground="?attr/selectableItemBackgroundBorderless"
+                    android:text="@string/home_activity_layout_nearby_restaurant"
+                    android:textAllCaps="false" />
+
+                <Button
+                    android:id="@+id/bt_nearby_cafe"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_margin="@dimen/home_nearby_bottom_padding"
+                    android:layout_weight="1"
+                    android:background="@color/color_white"
+                    android:drawableTop="@drawable/tinru_cafe_icon"
+                    android:elevation="4dp"
+                    android:foreground="?attr/selectableItemBackgroundBorderless"
+                    android:text="@string/home_activity_layout_nearby_cafe"
+                    android:textAllCaps="false" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
                 android:layout_weight="1"
-                android:layout_gravity="center"
-                android:background="@color/color_white"
-                android:foreground="?attr/selectableItemBackgroundBorderless"
-                android:layout_margin="@dimen/home_nearby_bottom_padding"
-                android:elevation="4dp"
-                android:textAllCaps="false"
-                android:drawableTop="@drawable/tinru_cafe_icon"
-                android:text="@string/home_activity_layout_nearby_cafe"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-            <Button
-                android:id="@+id/bt_nearby_bar"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/bt_nearby_bar"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_margin="@dimen/home_nearby_bottom_padding"
+                    android:layout_weight="1"
+                    android:background="@color/color_white"
+                    android:drawableTop="@drawable/tinru_bar_icon"
+                    android:elevation="4dp"
+                    android:foreground="?attr/selectableItemBackgroundBorderless"
+                    android:text="@string/home_activity_layout_nearby_bar"
+                    android:textAllCaps="false" />
+
+                <Button
+                    android:id="@+id/bt_nearby_atm"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_margin="@dimen/home_nearby_bottom_padding"
+                    android:layout_weight="1"
+                    android:background="@color/color_white"
+                    android:drawableTop="@drawable/tinru_atm_icon"
+                    android:elevation="4dp"
+                    android:foreground="?attr/selectableItemBackgroundBorderless"
+                    android:text="@string/home_activity_layout_nearby_atm"
+                    android:textAllCaps="false" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
                 android:layout_weight="1"
-                android:layout_gravity="center"
-                android:background="@color/color_white"
-                android:foreground="?attr/selectableItemBackgroundBorderless"
-                android:layout_margin="@dimen/home_nearby_bottom_padding"
-                android:elevation="4dp"
-                android:textAllCaps="false"
-                android:drawableTop="@drawable/tinru_bar_icon"
-                android:text="@string/home_activity_layout_nearby_bar"/>
-            <Button
-                android:id="@+id/bt_nearby_atm"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:layout_gravity="center"
-                android:background="@color/color_white"
-                android:foreground="?attr/selectableItemBackgroundBorderless"
-                android:layout_margin="@dimen/home_nearby_bottom_padding"
-                android:elevation="4dp"
-                android:textAllCaps="false"
-                android:drawableTop="@drawable/tinru_atm_icon"
-                android:text="@string/home_activity_layout_nearby_atm"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-            <Button
-                android:id="@+id/bt_nearby_shopping"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:layout_gravity="center"
-                android:background="@color/color_white"
-                android:foreground="?attr/selectableItemBackgroundBorderless"
-                android:layout_margin="@dimen/home_nearby_bottom_padding"
-                android:elevation="4dp"
-                android:textAllCaps="false"
-                android:drawableTop="@drawable/tinru_shopping_icon"
-                android:text="@string/home_activity_layout_nearby_shopping"/>
-            <Button
-                android:id="@+id/bt_nearby_petrol_pump"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:layout_gravity="center"
-                android:background="@color/color_white"
-                android:foreground="?attr/selectableItemBackgroundBorderless"
-                android:layout_margin="@dimen/home_nearby_bottom_padding"
-                android:elevation="4dp"
-                android:textAllCaps="false"
-                android:drawableTop="@drawable/tinru_petrol_pump_icon"
-                android:text="@string/home_activity_layout_nearby_petrol_pump"/>
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/bt_nearby_shopping"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_margin="@dimen/home_nearby_bottom_padding"
+                    android:layout_weight="1"
+                    android:background="@color/color_white"
+                    android:drawableTop="@drawable/tinru_shopping_icon"
+                    android:elevation="4dp"
+                    android:foreground="?attr/selectableItemBackgroundBorderless"
+                    android:text="@string/home_activity_layout_nearby_shopping"
+                    android:textAllCaps="false" />
+
+                <Button
+                    android:id="@+id/bt_nearby_petrol_pump"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_margin="@dimen/home_nearby_bottom_padding"
+                    android:layout_weight="1"
+                    android:background="@color/color_white"
+                    android:drawableTop="@drawable/tinru_petrol_pump_icon"
+                    android:elevation="4dp"
+                    android:foreground="?attr/selectableItemBackgroundBorderless"
+                    android:text="@string/home_activity_layout_nearby_petrol_pump"
+                    android:textAllCaps="false" />
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-
-</LinearLayout>
+</FrameLayout>
