--- a/app/src/main/res/layout/single_nearby_card_item.xml
+++ b/app/src/main/res/layout/single_nearby_card_item.xml
@@ -1,22 +1,22 @@
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:cardview="http://schemas.android.com/apk/res-auto"
     xmlns:tool="http://schemas.android.com/tools"
     android:id="@+id/cv_single_recipe"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
+    android:layout_margin="@dimen/single_nearby_item_margin"
+    android:foreground="?android:attr/selectableItemBackground"
     cardview:cardBackgroundColor="@color/colorPrimary"
     cardview:cardCornerRadius="@dimen/card_view_corner_radius"
     cardview:cardElevation="@dimen/card_view_elevation"
-    cardview:cardUseCompatPadding="true"
-    android:layout_margin="@dimen/single_nearby_item_margin"
-    android:foreground="?android:attr/selectableItemBackground">
+    cardview:cardUseCompatPadding="true">
 
-<RelativeLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-    android:background="@color/color_white">
+        android:background="@color/color_white"
+        android:paddingBottom="@dimen/single_nearby_item_text_padding">
 
         <ImageView
             android:id="@+id/iv_single_nearby_image"
@@ -31,33 +31,52 @@
             android:id="@+id/tv_single_nearby_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/single_nearby_item_text_padding"
             android:layout_below="@+id/iv_single_nearby_image"
             android:fontFamily="sans-serif"
-            android:padding="@dimen/single_nearby_item_text_padding"
-            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-            tool:text="Nearby item Name"/>
-    <RatingBar
-        android:id="@+id/tv_single_nearby_rating"
-        android:layout_below="@+id/tv_single_nearby_name"
-        style = "?android:attr/ratingBarStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:stepSize="0.1"
-        android:numStars="5"/>
-    <LinearLayout
-        android:layout_below="@+id/tv_single_nearby_rating"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            tool:text="Nearby item Name" />
+
         <TextView
+            android:id="@+id/tv_single_nearby_vicinity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/single_nearby_item_open_close_heading"/>
+            android:paddingLeft="@dimen/single_nearby_item_text_padding"
+            android:layout_below="@+id/tv_single_nearby_name"
+            android:fontFamily="sans-serif"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            tool:text="Prince Regent Street, Hounslow" />
+
+        <TextView
+            android:id="@+id/tv_single_nearby_rating_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/single_nearby_item_text_padding"
+            android:layout_below="@+id/tv_single_nearby_vicinity"
+            android:fontFamily="sans-serif"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textColor="@color/colorAccent"
+            tool:text="4.6" />
+
+        <RatingBar
+            android:id="@+id/rb_single_nearby_rating"
+            style="?android:attr/ratingBarStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/single_nearby_item_text_padding"
+            android:layout_below="@+id/tv_single_nearby_vicinity"
+            android:layout_toRightOf="@+id/tv_single_nearby_rating_value"
+            android:numStars="5"
+            android:stepSize="0.1" />
+
         <TextView
             android:id="@+id/tv_single_nearby_open_close_status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tool:text="Open now"/>
-    </LinearLayout>
+            android:paddingLeft="@dimen/single_nearby_item_text_padding"
+            android:layout_below="@+id/tv_single_nearby_rating_value"
+            android:fontFamily="sans-serif"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            tool:text="Open now" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
