--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -19,6 +19,5 @@
     <dimen name="poi_list_flight_button_drawable_padding">10dp</dimen>
     <dimen name="poi_list_flight_button_left_right_padding">20dp</dimen>
     <dimen name="poi_detail_image_width">280dp</dimen>
-
-
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
