Add flight search

--- a/app/src/main/res/layout/activity_flight_list.xml
+++ b/app/src/main/res/layout/activity_flight_list.xml
@@ -1,9 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.FlightListActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/tv_flight_list_orig_to_destination_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/material_design_phone_grid_layout_margin"
+        android:fontFamily="sans-serif"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        tools:text="London to Kolkata"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_flight_list"
+        android:layout_below="@+id/tv_flight_list_orig_to_destination_value"
+        android:layout_above="@+id/bt_flight"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+</RelativeLayout>
