--- a/app/src/main/res/layout/activity_point_of_interest_list.xml
+++ b/app/src/main/res/layout/activity_point_of_interest_list.xml
@@ -30,7 +30,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textAllCaps="false"/>
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_home"
+        android:id="@+id/fab_poi_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
