--- a/app/src/main/res/layout/activity_flight_list.xml
+++ b/app/src/main/res/layout/activity_flight_list.xml
@@ -1,24 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.FlightListActivity">
 
-    <TextView
-        android:id="@+id/tv_flight_list_orig_to_destination_value"
+    <ProgressBar
+        android:id="@+id/pb_flight_list_activity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/material_design_phone_grid_layout_margin"
-        android:fontFamily="sans-serif"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        tools:text="London to Kolkata"/>
+        android:layout_gravity="center"
+        android:visibility="visible" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_flight_list"
-        android:layout_below="@+id/tv_flight_list_orig_to_destination_value"
-        android:layout_above="@+id/bt_flight"
+    <TextView
+        android:id="@+id/tv_flight_list_pb_text_msg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="@dimen/material_design_phone_grid_layout_margin"
+        android:layout_marginTop="@dimen/progressbar_text_msg_top_margin"
+        android:fontFamily="sans-serif"
+        android:text="@string/home_progressbar_text_msg"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:visibility="invisible" />
+
+    <RelativeLayout
+        android:id="@+id/flight_list_relative_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-</RelativeLayout>
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/tv_flight_list_orig_to_destination_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/material_design_phone_grid_layout_margin"
+            android:fontFamily="sans-serif"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            tools:text="London to Kolkata" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_flight_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@+id/bt_flight"
+            android:layout_below="@+id/tv_flight_list_orig_to_destination_value" />
+    </RelativeLayout>
+</FrameLayout>
