--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -16,7 +16,8 @@
         android:id="@+id/tv_progressbar_text_msg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center|bottom"
+        android:layout_marginTop="@dimen/progressbar_text_msg_top_margin"
+        android:layout_gravity="center"
         android:fontFamily="sans-serif"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:layout_marginBottom="@dimen/material_design_phone_grid_layout_margin"
