--- a/app/src/main/res/layout/activity_point_of_interest_list.xml
+++ b/app/src/main/res/layout/activity_point_of_interest_list.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,33 +7,15 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_poi_list"
-        android:layout_above="@+id/bt_flight"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <Button
-        android:id="@+id/bt_flight"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerInParent="true"
-        android:gravity="center"
-        android:drawableLeft="@drawable/tinru_flight_button_icon"
-        android:drawablePadding="@dimen/poi_list_flight_button_drawable_padding"
-        android:paddingLeft="@dimen/poi_list_flight_button_left_right_padding"
-        android:paddingRight="@dimen/poi_list_flight_button_left_right_padding"
-        android:elevation="@dimen/button_elevation"
-        android:foreground="?attr/selectableItemBackgroundBorderless"
-        android:text="Flight to Paris"
-        android:fontFamily="sans-serif"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textAllCaps="false"/>
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_poi_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:src="@drawable/tinru_fab_flight"
-        android:layout_margin="@dimen/fab_margin" />
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/tinru_fab_flight" />
 </RelativeLayout>
