--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -21,4 +21,5 @@
     <dimen name="poi_detail_image_width">280dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="single_flight_rectangle_width_height">60dp</dimen>
+    <dimen name="progressbar_text_msg_top_margin">70dp</dimen>
 </resources>
