--- a/app/src/main/res/layout/activity_near_by_grid.xml
+++ b/app/src/main/res/layout/activity_near_by_grid.xml
@@ -1,21 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_white"
-    android:gravity="center"
-    android:orientation="vertical"
     tools:context=".ui.NearByGridActivity">
 
-    <FrameLayout
+    <ProgressBar
+        android:id="@+id/pb_nearby_list_activity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="visible" />
+
+    <TextView
+        android:id="@+id/tv_nearby_list_pb_text_msg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="@dimen/material_design_phone_grid_layout_margin"
+        android:layout_marginTop="@dimen/progressbar_text_msg_top_margin"
+        android:fontFamily="sans-serif"
+        android:text="@string/home_progressbar_text_msg"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:visibility="invisible" />
+
+    <RelativeLayout
+        android:id="@+id/nearby_list_relative_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/color_white"
+        android:gravity="center"
+        android:visibility="visible"
+        tools:context=".ui.NearByGridActivity">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_nearby_item_grid"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-    </FrameLayout>
 
-</LinearLayout>
+        <ImageView
+            android:id="@+id/iv_poi_detail_powered_by_google"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerInParent="true"
+            android:src="@drawable/powered_by_google_light" />
+    </RelativeLayout>
+</FrameLayout>
